syntax = "proto3";

option go_package = "protobuf/generated/comunication";

message SocialMedia {
    string name = 1;
    int32 user_id = 2 [json_name="user_id"];
}